# docs/swagger.yaml
@@ -383,11 +383,9 @@ paths:
         "200":
           description: OK
           schema:
-            $ref: '#/definitions/ds.ForecastRequest'
+            $ref: '#/definitions/ds.Forecasts'
         "500":
           description: Internal Server Error
-          schema:
-            $ref: '#/definitions/ds.Forecasts'
       summary: Add forecast to the list
       tags:
       - Forecasts
